analysis/analysis-api/testData/symbols/singleSymbolByPsi/errors/anonymousObjectInInvalidPosition.kt
// DO_NOT_CHECK_NON_PSI_SYMBOL_RESTORE
private val _commonSettingsLazy: A = null = ob<caret>ject : A<Int> {
    override fun x() {}
}

interface A<T> {
    fun x()
}
